**feat**(first commit): adapt boilerplate

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>Sample App</title>
+    <title>Ads Checkout - Seek</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
   </head>
   <body>
-    <div id='root'>
+    <div class='container-fluid' id='app'>
     </div>
-    <script src="/static/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
   </body>
 </html>
