**fix**(bootstrap): add local static bootstrap files to avoid CDN certificate issue

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Ads Checkout - Seek</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
   </head>
   <body>
     <div class='container-fluid' id='app'>
